# nchikkam.github.io

./: CHANGELOG.md  LICENSE  README.md  _config.yml  about.rst  contact.markdown  index.html  index.md  nchio.cabal  site.hs  stack.yaml
_site/: about.html  archive.html
_site/posts/: 2011-02-07-bdd.html  2012-02-12-python-recipes.html
assests/css/: style.scss
css/: default.css
docs/: about.html  archive.html  contact.html  index.html
docs/css/: default.css
docs/posts/: 2005-05-15-nestjs-vue-distributed-architecture.html  2006-01-15-flask-reactjs.html  2007-01-05-c++-in-memory-index-db.html  2011-02-07-bdd.html  2012-02-12-python-recipes.html  2014-01-02-cs-with-python.html  2016-06-25-nodejs-libs.html  2016-11-05-java-akka-actors.html  2016-11-05-java.html  2018-12-25-rails-reactjs.html  2020-01-15-flask-reactjs.html  2020-01-27-rust-trails.html  2022-06-05-ruby-gems.html  (+5 more)
posts/: 2005-05-15-nestjs-vue-distributed-architecture.markdown  2006-01-15-flask-reactjs.markdown  2007-01-05-c++-in-memory-index-db.markdown  2011-02-07-bdd.markdown  2012-02-12-python-recipes.markdown  2014-01-02-cs-with-python.markdown  2016-06-25-nodejs-libs.markdown  2016-11-05-java-akka-actors.markdown  2016-11-05-java.markdown  2018-12-25-rails-reactjs.markdown  2020-01-15-flask-reactjs.markdown  2020-01-27-rust-trails.markdown  2022-06-05-ruby-gems.markdown  2022-08-01-py-flask.markdown  2022-11-01-nodejs-libs.markdown  2023-01-01-golang.markdown  2024-12-12-js-skip-yt-ads.markdown  2025-05-15-nestjs-vue-distributed-architecture.markdown
templates/: default.html  post.html
(+69 files in other folders)
