cabal-version:       2.2

name:                nchio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nchikkam/nchikkam.github.io#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              nchikkam
maintainer:          nchikkam
copyright:           2025 nchikkam
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable nchio
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
